[gd_scene load_steps=3 format=3 uid="uid://dhdwspygl8is8"]

[ext_resource type="Script" uid="uid://dqtxo8v0bpt3t" path="res://scenes/ProductDetails.gd" id="1_hum7m"]
[ext_resource type="PackedScene" uid="uid://17do5csli6m2" path="res://components/ProductDisplay.tscn" id="2_0xnmx"]

[node name="ProductDetails" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_hum7m")

[node name="EffectList" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="UnknownEffectsWarning" type="Label" parent="."]
layout_mode = 2
text = "May have unintended effects"
horizontal_alignment = 1

[node name="BaseWarning" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
text = "Base not selected!"

[node name="ServeButton" type="Button" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Mix It!"

[node name="ProductDisplay" parent="." instance=ExtResource("2_0xnmx")]
layout_mode = 2
